# garage-queue

./: CUSTOMIZING.md  Cargo.toml  ERROR_HANDLING.org  GETTING_STARTED.md  README.org  config.example.toml  flake.nix  tasks.org
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: capability.rs  extractor.rs  jq.rs  lib.rs  logging.rs  matching.rs  protocol.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  dispatch.rs  health.rs  intake.rs  lib.rs  logging.rs  main.rs  metrics.rs  registry.rs  state.rs  systemd.rs  web_base.rs
crates/server/src/routes/: generate.rs  health.rs  intake.rs  mod.rs  sse.rs  work.rs
crates/server/tests/: integration_test.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  control.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs
crates/worker/src/delegator/: http.rs  mod.rs
crates/worker/tests/: control_test.rs  delegator_test.rs
examples/: server.toml  vram.jq  worker.toml
nix/modules/: darwin-server.nix  darwin-worker.nix  integration-ollama.nix  integrations.nix  server.nix  worker.nix
