[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
    "crates/server",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/garage-queue"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Systemd integration
sd-notify = "0.4"

# Web framework
axum = "0.7"
tokio = { version = "1.41", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum07"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client (worker delegator)
reqwest = { version = "0.12", features = ["json"] }

# NATS messaging
async-nats = "0.37"

# jq expression evaluation
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }

# Unique item identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Shared library
garage-queue-lib = { path = "crates/lib" }
