[package]
name = "garage-queue-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "garage-queue-cli"
path = "src/main.rs"

[dependencies]
garage-queue-lib = { workspace = true }
rust-template-foundation = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
reqwest = { workspace = true }
tokio = { workspace = true }
