[package]
name = "garage-queue-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
uuid = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"
