[package]
name = "garage-queue-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "garage_queue_server"
path = "src/lib.rs"

[[bin]]
name = "garage-queue-server"
path = "src/main.rs"

[dependencies]
garage-queue-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
sd-notify = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
tempfile = "3"
