[package]
name = "garage-queue-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "garage_queue_worker"
path = "src/lib.rs"

[[bin]]
name = "garage-queue-worker"
path = "src/main.rs"

[dependencies]
garage-queue-lib = { workspace = true }
rust-template-foundation = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
eventsource-stream = { workspace = true }
